@@ -1,3 +1,9 @@
+2024-06-08  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-trans.c (pkl_trans1_pr_try_stmt_body): increase
+	npopes only if not try-until.
+	(pkl_trans1_ps_try_stmt_body): Likewise.
+
 2024-06-07  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/std.pk: Remove some spurious debugging definitions.
